--- a/client/.github/workflow/ci-cd.yml
+++ b/client/.github/workflow/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Frontend CI
+name: Fullstack CI
 
 on:
   push:
@@ -7,33 +7,61 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  fullstack:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18"
           cache: "npm"
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run typecheck (optional if using TypeScript)
+     
+      # Frontend (client)
+      
+      - name: Install frontend dependencies
         run: |
+          cd client
+          npm install
+
+      - name: Typecheck frontend (optional)
+        run: |
+          cd client
           if [ -f tsconfig.json ]; then
             npm run typecheck || true
           fi
 
-      - name: Run tests (optional)
+      - name: Test frontend (optional)
         run: |
+          cd client
           if [ -f package.json ]; then
             npm test || true
           fi
 
-      - name: Build app
-        run: npm run build
+      - name: Build frontend
+        run: |
+          cd client
+          npm run build
+
+     
+      # Backend (server)
+      
+      - name: Install backend dependencies
+        run: |
+          cd server
+          npm install
+
+      - name: Typecheck backend (optional)
+        run: |
+          cd server
+          npx tsc --noEmit || true
+
+      #  backend tests for fututre 
+      # - name: Test backend (if exists)
+      #   run: |
+      #     cd server
+      #     npm test
